--- a/LibTool/LibTool.csproj
+++ b/LibTool/LibTool.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageId>Feebool.LibTool</PackageId>
     <Authors>Feebool</Authors>
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
     <PackageReference Include="System.Reactive" Version="4.1.0" />
   </ItemGroup>
 
